WIP: Added /machines/getMachines Swagger definition.
